<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SimpleCalendar!</string>
    <string name="app_name">SimpleCalendarImp</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_new_task">Add new task</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_placeholder">Enter task subject...</string>
    <string name="newtask_title"> New Task Title </string>
    <string name="task_description"> Task Description </string>
    <string name="high_prio">High</string>
    <string name="med_prio">Medium</string>
    <string name="low_prio">Low</string>
    <string name="done_action">Done</string>

</resources>
