<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mycalendaractivity.NewTaskActivity" >

    <EditText
        android:id="@+id/taskSubjectId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newtask_title" />

    <EditText
        android:id="@+id/taskDescriptionId"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:hint="@string/task_description" />

    <LinearLayout
        android:id="@+id/dateTimeId"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >

        <DatePicker
            android:id="@+id/datePickerId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:calendarViewShown="false" />

        <TimePicker
            android:id="@+id/timeickerId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/highPrioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_prio" />

        <RadioButton
            android:id="@+id/medPrioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/med_prio" />

        <RadioButton
            android:id="@+id/lowPrioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_prio" />
    </RadioGroup>

</LinearLayout>